python-server-main/k8s_backup/traefik/ingressClass.yaml
# traefik IngressClass
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: traefik
spec:
  controller: traefik.io/ingress-controller
