python-server-main/k8s_backup/traefik/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
spec:
  ingressClassName: traefik
  rules:
    - host: server.plannerai.kro.kr
      http:
        paths:
          - path: /spring
            pathType: Prefix
            backend:
              service:
                name: spring-service
                port:
                  number: 8099
          - path: /fastapi
            pathType: Prefix
            backend:
              service:
                name: fastapi-service
                port:
                  number: 1248
          - path: /adminer
            pathType: Prefix
            backend:
              service:
                name: adminer
                port:
                  number: 8081
          - path: /grafana
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 3000
